# hello

./: .clang-format  .cproject  .gitignore  .project  .travis.yml  CMakeLists.txt  readme.md
ci/travis/: set-env.sh
src/: hello.cpp
test/: testMain.py
